--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="forgot_password">Forgot Password</string>
     <string name="register">Register</string>
     <string name="sign_in">Sign In</string>
+    <string name="address">Address</string>
     <string name="password">Password</string>
     <string name="tabian_consulting_logo">Tabian Consulting Logo</string>
     <string name="email_registration">Email Registration</string>
