enabled basic location toggling per chat TODOs: 1) Add custom message instead of toggle 2) Fix issue: marker not showing when toggled from userListFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,9 @@
     <string name="action_leave_chatroom">Leave chatroom</string>
     <string name="action_chatroom_user_list">User list</string>
     <string name="action_profile">Profile</string>
+    <string name="toggle_location">Toggle location sharing</string>
+    <string name="enable_location">Share your location</string>
+    <string name="disable_location">Stop sharing your location</string>
 
 
 </resources>
