--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,7 +56,7 @@
     <string name="add_user_to_chatroom">Add user</string>
     <string name="intent_user_to_add">user_to_add_in_chatroom</string>
     <string name="fragment_add_user_to_chatroom">Add_user_to_chatroom</string>
-    <string name="enter_message_hint">Enter message...</string>
+    <string name="enter_message_hint">Enter message…</string>
 
 
 </resources>
