Fixed Delete Back Button, Added Chatroom NearBy feature etc.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,10 @@
     <string name="rename_chatroom">Rename Chatroom</string>
     <string name="delete_chatroom">Delete Chatroom</string>
     <string name="search_chatroom">Search Chatroom</string>
+    <string name="action_enable_nearby">See nearby chatrooms</string>
 
+    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
+    <string name="fcm_message">FCM Message</string>
+    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
 
 </resources>
