--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="forgot_password">Forgot Password</string>
     <string name="register">Register</string>
     <string name="sign_in">Sign In</string>
-    <string name="address">Address</string>
+    <string name="age">Age</string>
     <string name="password">Password</string>
     <string name="tabian_consulting_logo">Tabian Consulting Logo</string>
     <string name="email_registration">Email Registration</string>
@@ -68,12 +68,26 @@
     <string name="delete_chatroom">Delete Chatroom</string>
     <string name="search_chatroom">Search Chatroom</string>
     <string name="chatroom_image">Set Chatroom Image</string>
-    <string name="action_enable_nearby">See nearby chatrooms</string>
+    <string name="action_enable_nearby">See what\'s nearby</string>
 
     <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
     <string name="fcm_message">FCM Message</string>
     <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
     <string name="chatroom_name">Chatroom name</string>
     <string name="image_content_descriptor">image</string>
+    <string name="title_activity_profile_drawer">ProfileDrawerActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_tools">Tools</string>
+    <string name="menu_share">Share</string>
+    <string name="menu_send">Send</string>
 
 </resources>
